--- a/src/classes/IllegalArgumentException.cls
+++ b/src/classes/IllegalArgumentException.cls
@@ -1,3 +1,8 @@
+/**
+* @description Custom exception class.
+*
+* @author Maksim Fesenko
+*/
 public class IllegalArgumentException extends Exception {
 	
 }
