--- a/src/classes/NumericValidator.cls
+++ b/src/classes/NumericValidator.cls
@@ -1,16 +1,35 @@
+/**
+* @description Number validator.
+*
+* @author Maksim Fesenko
+*/
 public class NumericValidator {
 	private static final NumericValidator SINGLETON = new NumericValidator();
 	private Decimal value;
 	
 	public static String errorMessage;
 	
+	/**
+	* @description Empty constructor
+	*/
 	private NumericValidator() {
 	}
 	
+	/**
+	* @description Get instance of this class.
+	*
+	* @return NumericValidator is instance of this class.
+	*/
 	public static NumericValidator getInstance() {
 		return SINGLETON;
 	}
 	
+	/**
+	* @description Validate string value and convert to number variable.
+	*
+	* @param p_value is string value.
+	* @return NumberValidator is instance of this class.
+	*/
 	public NumericValidator validate(String p_value) {
 		if (p_value.isNumeric()) {
 			value = Decimal.valueOf(p_value);
@@ -41,6 +60,13 @@ public class NumericValidator {
 		return this;
 	}
 	
+	/**
+	* @description Validate method with formatstyle.
+	*
+	* @param p_value is string variable.
+	* @param p_format is format variable.
+	* @return NumericValidator is instance of this class.
+	*/
 	public NumericValidator validate(String p_value, String p_format) {
 		this.validate(p_value);
 		
@@ -54,14 +80,29 @@ public class NumericValidator {
 		return this;
 	}
 	
+	/**
+	* @description Convert numeric value to Integer.
+	*
+	* @return Integer is value after converting.
+	*/
 	public Integer toInteger() {
 		return Integer.valueOf(value);
 	}
 	
+	/**
+	* @description Convert numeric value to Double.
+	*
+	* @return Double is value after converting.
+	*/
 	public Double toDouble() {
 		return Double.valueOf(value);
 	}
 	
+	/**
+	* @description Convert numeric value to Decimal.
+	*
+	* @return Decimal is value after converting.
+	*/
 	public Decimal toDecimal() {
 		return value;
 	}
